[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/FreePixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuPanel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="MainMenuPanel"]
margin_left = 437.0
margin_top = 200.0
margin_right = 587.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenuPanel"]
margin_left = 437.0
margin_top = 275.0
margin_right = 587.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MainMenuPanel"]
margin_left = 437.0
margin_top = 350.0
margin_right = 587.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="OptionsPanel"]
margin_left = 475.0
margin_top = 500.0
margin_right = 550.0
margin_bottom = 526.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuName" type="Label" parent="OptionsPanel"]
margin_left = 400.0
margin_top = 100.0
margin_right = 650.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 5 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="OptionsPanel"]
margin_left = 435.0
margin_top = 175.0
margin_right = 526.0
margin_bottom = 195.0
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="OptionsPanel"]
margin_left = 435.0
margin_top = 200.0
margin_right = 585.0
margin_bottom = 220.0
min_value = -40.0
max_value = 20.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsLabel" type="Label" parent="OptionsPanel"]
margin_left = 437.0
margin_top = 230.0
margin_right = 536.0
margin_bottom = 250.0
text = "Sounds Volume"

[node name="SoundsVolume" type="HSlider" parent="OptionsPanel"]
margin_left = 437.0
margin_top = 250.0
margin_right = 587.0
margin_bottom = 270.0
min_value = -40.0
max_value = 20.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheck" type="CheckBox" parent="OptionsPanel"]
margin_left = 530.0
margin_top = 295.0
margin_right = 554.0
margin_bottom = 319.0

[node name="FullscreenLabel" type="Label" parent="OptionsPanel"]
margin_left = 455.0
margin_top = 300.0
margin_right = 525.0
margin_bottom = 320.0
text = "Fullscreen"

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
autoplay = true

[connection signal="pressed" from="MainMenuPanel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenuPanel/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenuPanel/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="OptionsPanel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="value_changed" from="OptionsPanel/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="OptionsPanel/SoundsVolume" to="." method="_on_SoundsVolume_value_changed"]
[connection signal="toggled" from="OptionsPanel/FullscreenCheck" to="." method="_on_FullscreenCheck_toggled"]
